syntax = "proto3";

package conveyor.checkpoint;

import "common.proto";
import "google/protobuf/timestamp.proto";

service CheckpointService {
  rpc CommitOffset(CommitOffsetRequest) returns (CommitOffsetResponse);
  rpc GetSourceOffset(GetOffsetRequest) returns (GetOffsetResponse);
  rpc ReportWatermark(WatermarkRequest) returns (WatermarkResponse);
  rpc GetWatermark(GetWatermarkRequest) returns (GetWatermarkResponse);
  rpc SaveCheckpoint(SaveCheckpointRequest) returns (SaveCheckpointResponse);
  rpc GetCheckpoint(GetCheckpointRequest) returns (GetCheckpointResponse);
  rpc GetGroupOffsets(GetGroupOffsetsRequest) returns (GetGroupOffsetsResponse);
  rpc CommitGroupOffset(CommitGroupOffsetRequest) returns (CommitGroupOffsetResponse);
  rpc GetPipelineCheckpoints(GetPipelineCheckpointsRequest) returns (GetPipelineCheckpointsResponse);
}

message CommitOffsetRequest {
  string source_id = 1;
  uint32 partition = 2;
  uint64 offset = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message CommitOffsetResponse {
  bool success = 1;
}

message GetOffsetRequest {
  string source_id = 1;
  optional uint32 partition = 2;
}

message GetOffsetResponse {
  map<uint32, uint64> offsets = 1;
  map<uint32, google.protobuf.Timestamp> timestamps = 2;
}

message WatermarkRequest {
  conveyor.common.Watermark watermark = 1;
}

message WatermarkResponse {
  bool accepted = 1;
  conveyor.common.Watermark current_global_watermark = 2;
}

message GetWatermarkRequest {
  string source_id = 1;
  optional uint32 partition = 2;
}

message GetWatermarkResponse {
  repeated conveyor.common.Watermark watermarks = 1;
  conveyor.common.Watermark global_watermark = 2;
}

message SaveCheckpointRequest {
  string service_id = 1;
  string checkpoint_id = 2;
  bytes data = 3;
  map<string, PartitionOffsets> source_offsets = 4;
}

message PartitionOffsets {
  map<uint32, uint64> offsets = 1;
}

message SaveCheckpointResponse {
  bool success = 1;
  string checkpoint_id = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GetCheckpointRequest {
  string service_id = 1;
}

message GetCheckpointResponse {
  bool found = 1;
  string checkpoint_id = 2;
  bytes data = 3;
  map<string, PartitionOffsets> source_offsets = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetGroupOffsetsRequest {
  string group_id = 1;
  optional string source_id = 2;
}

message GetGroupOffsetsResponse {
  map<string, PartitionOffsets> source_offsets = 1;
}

message CommitGroupOffsetRequest {
  string group_id = 1;
  string source_id = 2;
  uint32 partition = 3;
  uint64 offset = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message CommitGroupOffsetResponse {
  bool success = 1;
}

message GetPipelineCheckpointsRequest {
  string pipeline_id = 1;
}

message GetPipelineCheckpointsResponse {
  repeated ServiceCheckpoint service_checkpoints = 1;
  map<string, PartitionOffsets> source_offsets = 2;
  repeated conveyor.common.Watermark watermarks = 3;
}

message ServiceCheckpoint {
  string service_id = 1;
  string checkpoint_id = 2;
  bytes data = 3;
  google.protobuf.Timestamp created_at = 4;
}
